deploy: 40f917494659dbb8bbc9dd0c0d0f15ccb68d0491

--- a/main/index.html
+++ b/main/index.html
@@ -485,8 +485,8 @@ a {
 <div id="header">
 <h1>Layered Standard for Structured Data</h1>
 <div class="details">
-<span id="revnumber">version main-4ded48794495e1d9f84495b68f61988ac5d6c4a2,</span>
-<span id="revdate">2024-12-12</span>
+<span id="revnumber">version main-40f917494659dbb8bbc9dd0c0d0f15ccb68d0491,</span>
+<span id="revdate">2024-12-20</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Contents</div>
@@ -515,7 +515,7 @@ a {
 <ul class="sectlevel2">
 <li><a href="#_definitions_2">4.1. Definitions</a></li>
 <li><a href="#_example">4.2. Example</a></li>
-<li><a href="#_referencing_modelica_standard_library_librarycombitables">4.3. Referencing Modelica Standard Library libraryCombitables</a>
+<li><a href="#_referencing_modelica_standard_library_combitables">4.3. Referencing Modelica Standard Library Combitables</a>
 <ul class="sectlevel3">
 <li><a href="#_referencing_modelica_standard_library_combitable1d">4.3.1. Referencing Modelica Standard Library CombiTable1d</a>
 <ul class="sectlevel4">
@@ -531,7 +531,7 @@ a {
 </li>
 </ul>
 </li>
-<li><a href="#_maps_sampled_on_a_irregular_grid_point_cloud">5. Maps sampled on a irregular grid ("Point Cloud")</a>
+<li><a href="#_maps_sampled_on_irregular_grids_point_cloud">5. Maps sampled on irregular grids ("Point Cloud")</a>
 <ul class="sectlevel2">
 <li><a href="#_definitions_3">5.1. Definitions</a></li>
 <li><a href="#_example_4">5.2. Example</a></li>
@@ -744,7 +744,7 @@ If present, a <code>domainOutput</code> variable must be listed directly after t
 </dl>
 </div>
 <div class="paragraph">
-<p>Additional terminal member variables can be added to the terminal as related variables but if they do not fit into one of the above categories, they shall not have a <code>variableKind' starting with `org.fmi-standard.fmi-ls-struct</code>.</p>
+<p>Additional terminal member variables can be added to the terminal as related variables but if they do not fit into one of the above categories, they shall not have a <code>variableKind</code> starting with <code>org.fmi-standard.fmi-ls-struct</code>.</p>
 </div>
 </div>
 <div class="sect3">
@@ -910,7 +910,7 @@ However, for the example lookup tables of this document, the sampling points of 
 </div>
 </div>
 <div class="sect2">
-<h3 id="_referencing_modelica_standard_library_librarycombitables">4.3. Referencing Modelica Standard Library libraryCombitables</h3>
+<h3 id="_referencing_modelica_standard_library_combitables">4.3. Referencing Modelica Standard Library Combitables</h3>
 <div class="paragraph">
 <p>The Modelica Standard Library defines lookup tables which are stored in a single matrix (<a href="https://doc.modelica.org/om/Modelica.Blocks.Tables.html" class="bare">https://doc.modelica.org/om/Modelica.Blocks.Tables.html</a>)</p>
 </div>
@@ -1069,7 +1069,7 @@ start="  0 1.0 2.0 3.0
 </div>
 </div>
 <div class="sect1">
-<h2 id="_maps_sampled_on_a_irregular_grid_point_cloud">5. Maps sampled on a irregular grid ("Point Cloud")</h2>
+<h2 id="_maps_sampled_on_irregular_grids_point_cloud">5. Maps sampled on irregular grids ("Point Cloud")</h2>
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_definitions_3">5.1. Definitions</h3>
