--- a/main/index.html
+++ b/main/index.html
@@ -480,12 +480,114 @@ a {
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/styles/github.min.css">
+<script>
+// hide / show the Table of Contents (TOC)
+function toggleTOC() {
+  var toc = document.getElementById("toc");
+  var body = document.getElementsByTagName("body")[0];
+
+  if (toc.style.display === "none") {
+      toc.style.display = "block";
+      body.classList.remove("toc-hidden");
+  } else {
+      toc.style.display = "none";
+      body.classList.add("toc-hidden");
+  }
+}
+
+// toggle the TOC when "t" key is pressed
+document.addEventListener('keydown', (event) => {
+  if (event.key == 't') {
+    toggleTOC();
+  }
+});
+</script>
+
+<!-- Generate a nice TOC -->
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tocify/1.9.0/javascripts/jquery.tocify.min.js"></script>
+<!-- We do not need the tocify CSS because the asciidoc CSS already provides most of what we neeed -->
+
+<style>
+.tocify-header {
+    font-style: italic;
+}
+
+.tocify-subheader {
+    font-style: normal;
+    font-size: 90%;
+}
+
+.tocify ul {
+    margin: 0;
+ }
+
+.tocify-focus {
+    color: #7a2518;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.tocify-focus > a {
+    color: #7a2518;
+}
+</style>
+
+<script type="text/javascript">
+    $(function () {
+        // Add a new container for the tocify toc into the existing toc so we can re-use its
+        // styling
+        $("#toc").append("<div id='generated-toc'></div>");
+        $("#generated-toc").tocify({
+            extendPage: true,
+            context: "#content",
+            highlightOnScroll: true,
+            // don't hide the sections in the TOC
+            showAndHide: false,
+            hideEffect: "slideUp",
+            // Use the IDs that asciidoc already provides so that TOC links and intra-document
+            // links are the same. Anything else might confuse users when they create bookmarks.
+            hashGenerator: function(text, element) {
+                return $(element).attr("id");
+            },
+            // Smooth scrolling doesn't work properly if we use the asciidoc IDs
+            smoothScroll: false,
+            // Set to 'none' to use the tocify classes
+            theme: "none",
+            // Handle book (may contain h1) and article (only h2 deeper)
+            selectors: $( "#content" ).has( "h1" ).size() > 0 ? "h1,h2,h3,h4,h5" : "h2,h3,h4,h5,h6",
+            ignoreSelector: ".discrete"
+        });
+
+        // Switch between static asciidoc toc and dynamic tocify toc based on browser size
+        // This is set to match the media selectors in the asciidoc CSS
+        // Without this, we keep the dynamic toc even if it is moved from the side to preamble
+        // position which will cause odd scrolling behavior
+        var handleTocOnResize = function() {
+            if ($(document).width() < 768) {
+                $("#generated-toc").hide();
+                $(".sectlevel0").show();
+                $(".sectlevel1").show();
+            }
+            else {
+                $("#generated-toc").show();
+                $(".sectlevel0").hide();
+                $(".sectlevel1").hide();
+            }
+        }
+
+        $(window).resize(handleTocOnResize);
+        handleTocOnResize();
+    });
+</script>
+
+<img style="display: block; margin: 2em auto; width: 30em;" src="images/FMI_logo_horizontal.svg" alt="FMI logo">
 </head>
-<body class="article toc2 toc-left">
+<body class="book toc2 toc-left">
 <div id="header">
 <h1>Layered Standard for Structured Data</h1>
 <div class="details">
-<span id="revnumber">version main-40f917494659dbb8bbc9dd0c0d0f15ccb68d0491,</span>
+<span id="revnumber">version main-f180cba6ba210a2d82ac0a78d302a5ce35578594,</span>
 <span id="revdate">2024-12-20</span>
 </div>
 <div id="toc" class="toc2">
@@ -674,6 +776,9 @@ By pressing "t", the table of contents can be displayed on the left side or hidd
 	fmi-ls:fmi-ls-version="1.0.0"
 	fmi-ls:fmi-ls-description="Layered standard for structuring of variables"/&gt;</code></pre>
 </div>
+</div>
+<div class="paragraph">
+<p>The manifest file shall be stored inside the FMU at the following path: <code>/extra/org.fmi-standard.fmi-ls-struct/fmi-ls-manifest.xml</code>.</p>
 </div>
 </div>
 </div>
