--- a/main/index.html
+++ b/main/index.html
@@ -587,7 +587,7 @@ document.addEventListener('keydown', (event) => {
 <div id="header">
 <h1>Layered Standard for Structured Data</h1>
 <div class="details">
-<span id="revnumber">version 54ed95e,</span>
+<span id="revnumber">version f4951f8,</span>
 <span id="revdate">2024-12-20</span>
 </div>
 <div id="toc" class="toc2">
@@ -751,7 +751,7 @@ By pressing "t", the table of contents can be displayed on the left side or hidd
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>fmi-ls-version</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>http://fmi-standard.org/fmi-ls-manifest</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>1.0.0</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>1.0.0-alpha.1</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Version of the layered standard. This layered standard uses semantic versioning, as defined in <a href="#PW13">[PW13]</a>.</p></td>
 </tr>
 <tr>
@@ -773,7 +773,7 @@ By pressing "t", the table of contents can be displayed on the left side or hidd
     xsi:noNamespaceSchemaLocation="../../schema/fmi3LayeredStandardStructManifest.xsd"
 	xmlns:fmi-ls="http://fmi-standard.org/fmi-ls-manifest"
 	fmi-ls:fmi-ls-name="org.fmi-standard.fmi-ls-struct"
-	fmi-ls:fmi-ls-version="1.0.0"
+	fmi-ls:fmi-ls-version="1.0.0-alpha.1"
 	fmi-ls:fmi-ls-description="Layered standard for structuring of variables"/&gt;</code></pre>
 </div>
 </div>
