--- a/main/index.html
+++ b/main/index.html
@@ -587,8 +587,8 @@ document.addEventListener('keydown', (event) => {
 <div id="header">
 <h1>Layered Standard for Structured Data</h1>
 <div class="details">
-<span id="revnumber">version 2e48f93,</span>
-<span id="revdate">2025-01-16</span>
+<span id="revnumber">version 7325f07,</span>
+<span id="revdate">2025-03-27</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Contents</div>
@@ -839,7 +839,7 @@ However the size of each <code>domainInput</code> must be the same for each doma
 <dt class="hdlist1"><code>org.fmi-standard.fmi-ls-struct.map.codomain</code></dt>
 <dd>
 <p>For each of the represented points in the domain set, the values to which they are mapped are represented.
-<em>[There can be multiple terminal member variables with <code>variablKind</code> <code>codomain</code> to represent multiple maps in one terminal.]</em></p>
+<em>[There can be multiple terminal member variables with <code>variableKind</code> <code>codomain</code> to represent multiple maps in one terminal.]</em></p>
 </dd>
 <dt class="hdlist1"><code>org.fmi-standard.fmi-ls-struct.map.domainOutput</code></dt>
 <dd>
