deploy: dc360fe3ad3091bf9163abeb0887c88b43435a7d

--- a/main/index.html
+++ b/main/index.html
@@ -587,7 +587,7 @@ document.addEventListener('keydown', (event) => {
 <div id="header">
 <h1>Layered Standard for Structured Data</h1>
 <div class="details">
-<span id="revnumber">version dc5500d,</span>
+<span id="revnumber">version dc360fe,</span>
 <span id="revdate">2025-04-22</span>
 </div>
 <div id="toc" class="toc2">
@@ -770,7 +770,8 @@ By pressing "t", the table of contents can be displayed on the left side or hidd
 <pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;?xml version="1.0" encoding="UTF-8"?&gt;
 &lt;fmiLayeredStandardManifest
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:noNamespaceSchemaLocation="../../schema/fmi3LayeredStandardStructManifest.xsd"
+    xsi:noNamespaceSchemaLocation="https://raw.githubusercontent.com/modelica/fmi-ls-struct/v1.0.0-alpha.1/schema/fmi3LayeredStandardStructManifest.xsd"
+
 	xmlns:fmi-ls="http://fmi-standard.org/fmi-ls-manifest"
 	fmi-ls:fmi-ls-name="org.fmi-standard.fmi-ls-struct"
 	fmi-ls:fmi-ls-version="1.0.0-alpha.1"
